--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@media (max-width: 576px) {
+  .table-header {
+    display: none;
+  }
+  tr {
+    display: block;
+    margin-bottom: 20px;
+  }
+  th,td {
+    flex-basis: 100%;
+    display: flex;
+    padding: 10px 0;
+  }
+  tr :before {
+    color: #6C7A89;
+    padding-right: 10px;
+    content: attr(data-label);
+    flex-basis: 50%;
+    text-align: right;
+  }
+}
