--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,3 +32,58 @@ code {
     text-align: right;
   }
 }
+/*style navbar*/
+
+.navvv{
+  justify-content:center;
+}
+
+.rechercheajout{
+  display: flex;
+  justify-content:flex-start;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
+
+}
+
+.ajouterr{
+  margin-right: 0.5rem;
+}
+
+.title{
+  margin-top: 2rem;
+}
+
+.modifsupp{
+  margin-top: 2rem;
+}
+
+.search{
+  padding-left: 10rem;
+}
+
+/*.modifier{
+  background-color:#00adb5 ;
+  border-radius: 5px;
+  border-color: #00adb5;
+  height: 2.3rem;
+}*/
+
+.ajouter{
+  position: relative;
+  width: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  border-radius: 50px;
+  border: 4px solid #393e46;
+  padding: 5px;
+  background: #222831;
+  transition: all 0.5s;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
