--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,6 +36,10 @@ code {
 
 .navvv{
   justify-content:center;
+  border-radius: 5px;
+  border: solid;
+  background-color: rgb(0, 0, 0);
+  margin-top: 0rem;
 }
 
 .rechercheajout{
