--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,10 +36,10 @@ code {
 
 .navvv{
   justify-content:center;
-  border-radius: 5px;
+  /*border-radius: 5px;
   border: solid;
   background-color: rgb(0, 0, 0);
-  padding:0.4rem;
+  padding:0.4rem;*/
 }
 
 .rechercheajout{
