--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,6 +42,10 @@ code {
   padding:0.4rem;*/
 }
 
+.navbar{
+  background-color: #222831;
+}
+
 .rechercheajout{
   display: flex;
   justify-content:flex-start;
