--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,3 +108,53 @@ code {
   margin-left: 0.5rem;
 
 }
+
+
+/* scrollbar 
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0,0,0,0.1);
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background: rgba(0,0,0,0.2);
+}
+::-webkit-scrollbar-thumb:hover{
+  background: rgba(0,0,0,0.4);
+}
+::-webkit-scrollbar-thumb:active{
+  background: rgba(0,0,0,.9);
+}*/
+
+::-webkit-scrollbar-track
+{
+	border: 2px solid white;
+	background-color: #e2e3e5;
+}
+
+::-webkit-scrollbar
+{
+	width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #d0d0d0;
+	border-radius: 10px;
+  
+}
+
+::-webkit-scrollbar-thumb:hover
+{
+	background-color: #c2c2c2;
+}
+
+::-webkit-scrollbar-thumb:active
+{
+	background-color: #6c757d;
+}
