--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,8 +49,8 @@ code {
 .rechercheajout{
   display: flex;
   justify-content:flex-start;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   margin-left: 2rem;
 
 }
@@ -109,52 +109,73 @@ code {
 
 }
 
-
-/* scrollbar 
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background: rgba(0,0,0,0.1);
-}
-::-webkit-scrollbar-thumb{
-  border-radius: 10px;
-  background: rgba(0,0,0,0.2);
-}
-::-webkit-scrollbar-thumb:hover{
-  background: rgba(0,0,0,0.4);
-}
-::-webkit-scrollbar-thumb:active{
-  background: rgba(0,0,0,.9);
-}*/
-
-::-webkit-scrollbar-track
-{
+/* Scrollbar */
+::-webkit-scrollbar-track{
 	border: 2px solid white;
 	background-color: #e2e3e5;
 }
-
-::-webkit-scrollbar
-{
+::-webkit-scrollbar{
 	width: 7px;
   height: 7px;
 }
-
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb{
 	background-color: #d0d0d0;
-	border-radius: 10px;
-  
 }
-
-::-webkit-scrollbar-thumb:hover
-{
+::-webkit-scrollbar-thumb:hover{
 	background-color: #c2c2c2;
 }
-
-::-webkit-scrollbar-thumb:active
-{
+::-webkit-scrollbar-thumb:active{
 	background-color: #6c757d;
+}
+
+/* Scrollbar Buttons */
+::-webkit-scrollbar-button:single-button {
+  background-color: #d0d0d0;
+  display: block;
+  height: 12px;
+  width: 12px;
+}
+/* Up */
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+}
+::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+  background-color: #c2c2c2;
+}
+::-webkit-scrollbar-button:single-button:vertical:decrement:active {
+  background-color: #6c757d;
+}
+/* Down */
+::-webkit-scrollbar-button:single-button:vertical:increment {
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+}
+::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+  background-color: #c2c2c2;
+}
+::-webkit-scrollbar-button:vertical:single-button:increment:active {
+  background-color: #6c757d;
+}
+/* Right */
+::-webkit-scrollbar-button:single-button:horizontal:increment {
+  border-top-right-radius:10px;
+  border-bottom-right-radius:10px;
+}
+::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
+  background-color: #c2c2c2;
+}
+::-webkit-scrollbar-button:horizontal:single-button:increment:active {
+  background-color: #6c757d;
+}
+/* Left */
+::-webkit-scrollbar-button:single-button:horizontal:decrement {
+  border-bottom-left-radius:10px;
+  border-top-left-radius:10px;
+}
+::-webkit-scrollbar-button:horizontal:single-button:decrement:hover {
+  background-color: #c2c2c2;
+}
+::-webkit-scrollbar-button:horizontal:single-button:decrement:active {
+  background-color: #6c757d;
 }
