--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,19 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 @media (max-width: 576px) {
   .mytableheader {
     display: none;
   }
+
   tr {
     display: block;
     margin-bottom: 20px;
   }
-  th,td {
+
+  th,
+  td {
     flex-basis: 100%;
     display: flex;
     padding: 10px 0;
   }
+
   tr :before {
     color: #6C7A89;
     padding-right: 10px;
@@ -34,41 +39,41 @@ code {
 }
 
 /*style navbar*/
-.navvv{
-  justify-content:center;
+.navvv {
+  justify-content: center;
   /*border-radius: 5px;
   border: solid;
   background-color: rgb(0, 0, 0);
   padding:0.4rem;*/
 }
 
-.navbar{
+.navbar {
   background-color: #222831;
 }
 
-.rechercheajout{
+.rechercheajout {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   margin-bottom: 4vh;
   margin-top: 1vh;
   margin-left: 2rem;
 }
 
-.ajouterr{
+.ajouterr {
   margin-right: 0.5rem;
 }
 
-.title{
+.title {
   font-size: 1.5rem;
   margin-top: 2vh;
   /*color: #00adb5;*/
 }
 
-.modifsupp{
+.modifsupp {
   margin-top: 2vh;
 }
 
-.search{
+.search {
   padding-left: 10rem;
 }
 
@@ -79,7 +84,7 @@ code {
   height: 2.3rem;
 }*/
 
-.ajouter{
+.ajouter {
   position: relative;
   width: 40px;
   height: 40px;
@@ -97,12 +102,12 @@ code {
 
 }
 
-.radio{
+.radio {
   display: flex;
   align-items: center;
 }
 
-.form-check-input{
+.form-check-input {
   margin-right: 0.3rem;
   margin-left: 0.5rem;
 
@@ -110,37 +115,43 @@ code {
 
 
 /* my classes */
-.mylegend{
+.mylegend {
   font-size: 1rem;
   line-height: 2.2rem;
   margin-right: 2vh;
 }
 
 /* table */
-.mytable-68{
-  height:68vh;
+.mytable-68 {
+  height: 68vh;
 }
-.mytable-60{
-  height:60vh;
+
+.mytable-60 {
+  height: 60vh;
 }
-.mytable-56{
-  height:56vh;
+
+.mytable-56 {
+  height: 56vh;
 }
-.mytable-52{
-  height:52vh;
+
+.mytable-52 {
+  height: 52vh;
 }
-.mytableheader{
+
+.mytableheader {
   position: sticky;
   top: 0;
 }
-.mycontainer{
+
+.mycontainer {
   margin-left: 3%;
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   margin-bottom: 1vh;
 }
+
 .myselect {
-  display: inline;  
+  display: inline;
   border: 0;
   width: 20%;
   outline: none;
@@ -151,36 +162,77 @@ code {
   transition: all .4s ease-in-out;
   padding: 5px;
 }
-.myselect:hover { 
-    background-color:#e9ecef;
-  }
-  
-  .myselect option {
-    border: 0;
-    border-bottom: 1px solid black;
-    padding: 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-color:#e9ecef;
-  }
+
+.myselect:hover {
+  background-color: #e9ecef;
+}
+
+.myselect option {
+  border: 0;
+  border-bottom: 1px solid black;
+  padding: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: #e9ecef;
+}
+
+.myradio:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  background-color: #e9ecef;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid #ced4da;
+}
+
+.myradio {
+  visibility: hidden;
+}
+
+.myradio:checked:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  position: relative;
+  background-color: rgb(69, 69, 69);
+  display: inline-block;
+  visibility: visible;
+  border: 3.5px solid #ced4da;
+}
+
+.myradio:hover {
+  background-color: grey;
+}
+
+.mytext{
+  font-size: 0.8rem;
+  padding-top: 1.5vh;
+}
+
 
 /* Scrollbar */
-::-webkit-scrollbar-track{
-	border: 2px solid white;
-	background-color: #e2e3e5;
+::-webkit-scrollbar-track {
+  border: 2px solid white;
+  background-color: #e2e3e5;
 }
-::-webkit-scrollbar{
-	width: 7px;
+
+::-webkit-scrollbar {
+  width: 7px;
   height: 7px;
 }
-::-webkit-scrollbar-thumb{
-	background-color: #d0d0d0;
+
+::-webkit-scrollbar-thumb {
+  background-color: #d0d0d0;
 }
-::-webkit-scrollbar-thumb:hover{
-	background-color: #c2c2c2;
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #c2c2c2;
 }
-::-webkit-scrollbar-thumb:active{
-	background-color: #6c757d;
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #6c757d;
 }
 
 /* Scrollbar Buttons */
@@ -190,48 +242,59 @@ code {
   height: 12px;
   width: 12px;
 }
+
 /* Up */
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
-  border-top-left-radius:10px;
-  border-top-right-radius:10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
+
 ::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
   background-color: #c2c2c2;
 }
+
 ::-webkit-scrollbar-button:single-button:vertical:decrement:active {
   background-color: #6c757d;
 }
+
 /* Down */
 ::-webkit-scrollbar-button:single-button:vertical:increment {
-  border-bottom-left-radius:10px;
-  border-bottom-right-radius:10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
+
 ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
   background-color: #c2c2c2;
 }
+
 ::-webkit-scrollbar-button:vertical:single-button:increment:active {
   background-color: #6c757d;
 }
+
 /* Right */
 ::-webkit-scrollbar-button:single-button:horizontal:increment {
-  border-top-right-radius:10px;
-  border-bottom-right-radius:10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
+
 ::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
   background-color: #c2c2c2;
 }
+
 ::-webkit-scrollbar-button:horizontal:single-button:increment:active {
   background-color: #6c757d;
 }
+
 /* Left */
 ::-webkit-scrollbar-button:single-button:horizontal:decrement {
-  border-bottom-left-radius:10px;
-  border-top-left-radius:10px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
+
 ::-webkit-scrollbar-button:horizontal:single-button:decrement:hover {
   background-color: #c2c2c2;
 }
+
 ::-webkit-scrollbar-button:horizontal:single-button:decrement:active {
   background-color: #6c757d;
 }
-
