--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -314,7 +314,7 @@ code {
 /*emplacement dossier*/
 
 .ajoutdossier{
-  margin-left: 0.5vh;
+  margin-left: 22%;
   margin-bottom: 3vh;
 }
 
@@ -363,4 +363,16 @@ code {
   font-size: 90%;
  padding: 0.7%;  
 
+}
+
+
+.titlee {
+  font-size: 170%;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
+  /*color: #00adb5;*/
+}
+
+.ajouterrdeman {
+  margin-left: 20%;
 }
