--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,9 +63,7 @@ code {
   text-align: center;
   }
 
-.para{
-  z-index: 2;
- }
+ 
  
 
 .rechercheajout {
@@ -73,16 +71,60 @@ code {
   justify-content: flex-start;
   margin-bottom: 3vh;
   margin-top: 1vh;
-  margin-left: 2%;
+  margin-left: 3.4vh;
 }
 
+.rechercheajoutcreation{
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 6vh;
+  margin-left:  3.4vh;
+}
+
+.myselectcreation {
+  display: inline;
+  border: 0;
+  width: 100%;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-bottom: 2px solid black;
+  color: black;
+  transition: all .4s ease-in-out;
+  padding: 5px;
+}
+
+.mycontainercreation {
+  margin-left: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 1vh;
+  width: 30vh;
+}
+
+.formclient{
+  display: flex;
+  flex-direction: column;
+    width: 80vh;
+    max-height: 100vh;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top:  7vh;
+ 
+ }
+
+ .client{
+  min-height: 100vh;
+  padding-top: 7vh;
+}
+ 
 .ajouterr {
   margin-right: 0.5rem;
 }
-
+ 
 
 .title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-top: 3vh;
   margin-bottom: 3vh;
   /*color: #00adb5;*/
@@ -397,9 +439,11 @@ position: fixed;
 
 
 .titlee {
-  font-size: 170%;
+  font-size: 1.6rem;
   margin-top: 3vh;
   margin-bottom: 3vh;
+  margin-left: auto;
+  margin-right: auto;
   /*color: #00adb5;*/
 }
 
@@ -407,46 +451,6 @@ position: fixed;
   margin-left: 20%;
 }
 
- 
-
-.client{
-  height: 200vh;
-}
-
-.section1{
-   
-  height: 100vh;
-  padding-top: 11vh;
-  margin-top: -11vh;
-}
-
-.split{
-  display: flex;
-justify-content: space-evenly
-; }
-
-
-  .left {
-  width:70vh;
-  margin: 5vh;
- }
-
- .matricule{
-  display: flex;
-max-height: 38px
-; }
-
-  .right {
-  width: 70vh;
-  margin: 5vh;
-
- } 
-
-  
-
-.section2{
-  height: 100vh;
-}
  
  
 
