--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,7 @@ code {
   justify-content: flex-start;
   margin-top: 6vh;
   margin-left:  3.4vh;
+  margin-bottom: 3vh;
 }
 
 .myselectcreation {
@@ -107,8 +108,8 @@ code {
   flex-direction: column;
     width: 80vh;
     max-height: 100vh;
-margin-left: 10vh;
-margin-right: 10vh;
+margin-left: auto;
+margin-right: auto;
    margin-top:  7vh;
  
  }
