--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -105,10 +105,9 @@ code {
 
 .formclient{
  
-    width: 80vh;
-    max-height: 100vh;
-margin-left: auto;
-margin-right: auto;
+   
+margin-left: 40vh;
+margin-right: 40vh;
 
  
  }
