Alternative for the admins' table

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,6 +58,16 @@ code {
   }
 }
 
+.t1{
+  background-color: #868e96;margin:0;width:100%;
+}
+.t2{
+  background-color:#02c3cc;margin:0;width:100%;
+}
+.t3{
+  background-color:#FFFFFF;margin:0;width:100%;
+}
+
  
 /*style navbar*/
 .navvv {
