--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -174,6 +174,11 @@ code {
     display: none;
   }.back{
     width: 100%;
+    height: 90vh;
+  }
+  .navbar {
+    background-color: #222831;
+    min-height: 10vh;
   }
 }
 @media (orientation: portrait) {
