--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -593,7 +593,7 @@ max-width: 25vw;
 .sidetitlee{
    position: relative;
 font-size: 0.9rem;
-  color: #FFD700;
+  color: #BBA14A;
   left: 4vw;
   top:11vh;
   max-width: 25vw;
@@ -636,7 +636,7 @@ font-size: 0.9rem;
     .sidetitlee{
        position: absolute;
    font-size: 0.9rem;
-     color: #FFD700;
+     color: #BBA14A;
     
 
      top:21vh;
