--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -170,18 +170,6 @@ code {
     flex-direction: column;
   }
 }
-@media (orientation: landscape) {
-  .backp{
-    display: none;
-  }.backgroundd{
-    width: 100%;
-    height: 90vh;
-  }
-  .navbar {
-    background-color: #000000;
-    min-height: 10vh;
-  }
-}
  
 
 .formdonnees {
@@ -602,8 +590,14 @@ font-size: 0.9rem;
 
 @media (orientation: portrait) {
   .backp{
+    background-image: url(./gavel-scaledp.jpg);
+    height: 100vh;
     width: 100vw;
-    height: 92vh;
+    position: absolute;
+    top:0;
+     background-size: 100% 100%;
+     background-repeat: no-repeat;
+  background-position: 0  5vh;
   }.backgroundd{
     display: none;
   }
@@ -628,13 +622,14 @@ font-size: 0.9rem;
     font-weight: bold;
     position: absolute;
     color: rgb(0, 0, 0);
-  
+    font-size: 2rem;
+
     max-width: 100vw;
  
     }
 
     .sidetitlee{
-       position: absolute;
+   position: absolute;
    font-size: 0.9rem;
      color: #BBA14A;
     
@@ -644,3 +639,13 @@ font-size: 0.9rem;
      font-family: 'Pacifico', cursive;
    }
 }
+
+@media (orientation: landscape) {
+  .backp{
+    display: none;
+  } 
+  .navbar {
+     min-height: 10vh;
+  }
+}
+ 
