--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,10 +19,171 @@ code {
     monospace;
 }
 
+
+
+.checkboxe {
+  --border-default-2: #bbbbc1;
+  --border-hover-2: #9898a3;
+  --active-2: #000;
+  --active-tick-2: #fff;
+  display: inline-block;
+  margin-left: 8px;
+  vertical-align:middle;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
+}
+.checkboxe svg {
+  display: block;
+  position: absolute;
+}
+.checkboxe input {
+  display: block;
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  -webkit-appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 36% / 36%;
+  box-shadow: inset 0 0 0 1.5px var(--border-2, var(--border-default-2));
+  background: var(--background-2, transparent);
+  transition: background 0.25s linear, box-shadow 0.25s linear;
+}
+.checkboxe input + svg {
+  width: 21px;
+  height: 18px;
+  left: 0;
+  top: 0;
+  color: var(--active-tick-2);
+}
+.checkboxe input + svg .tick {
+  stroke-dasharray: 20;
+  stroke-dashoffset: var(--stroke-dashoffset-2, 20);
+  transition: stroke-dashoffset 0.2s;
+}
+.checkboxe input + svg .tick.mask {
+  stroke: var(--active-tick-2);
+}
+.checkboxe input + svg + svg {
+  width: 11px;
+  height: 11px;
+  fill: none;
+  stroke: var(--active-2);
+  stroke-width: 1.25;
+  stroke-linecap: round;
+  top: -6px;
+  right: -10px;
+  stroke-dasharray: 4.5px;
+  stroke-dashoffset: 13.5px;
+  pointer-events: none;
+  animation: var(--animation-2, none) 0.2s ease 0.175s;
+}
+.checkboxe input:checked {
+  --background-2: var(--active-2);
+  --border-2: var(--active-2);
+}
+.checkboxe input:checked + svg {
+  --stroke-dashoffset-2: 0;
+}
+.checkboxe input:checked + svg + svg {
+  --animation-2: check;
+}
+.checkboxe:hover input:not(:checked) {
+  --border-2: var(--border-hover-2);
+}
+
+
+.checkbox {
+  --border-default: #bbbbc1;
+  --border-hover: #9898a3;
+  --active: #000;
+  --active-tick: #fff;
+  display: inline-block;
+  margin-left: 8px;
+  vertical-align:middle;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
+}
+.checkbox svg {
+  display: block;
+  position: absolute;
+}
+.checkbox input {
+  display: block;
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  -webkit-appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 36% / 36%;
+  box-shadow: inset 0 0 0 1.5px var(--border, var(--border-default));
+  background: var(--background, transparent);
+  transition: background 0.25s linear, box-shadow 0.25s linear;
+}
+.checkbox input + svg {
+  width: 21px;
+  height: 18px;
+  left: 0;
+  top: 0;
+  color: var(--active-tick);
+}
+.checkbox input + svg .tick {
+  stroke-dasharray: 20;
+  stroke-dashoffset: var(--stroke-dashoffset, 20);
+  transition: stroke-dashoffset 0.2s;
+}
+.checkbox input + svg .tick.mask {
+  stroke: var(--active-tick);
+}
+.checkbox input + svg + svg {
+  width: 11px;
+  height: 11px;
+  fill: none;
+  stroke: var(--active);
+  stroke-width: 1.25;
+  stroke-linecap: round;
+  top: -6px;
+  right: -10px;
+  stroke-dasharray: 4.5px;
+  stroke-dashoffset: 13.5px;
+  pointer-events: none;
+  animation: var(--animation, none) 0.2s ease 0.175s;
+}
+.checkbox input:checked {
+  --background: var(--active);
+  --border: var(--active);
+}
+.checkbox input:checked + svg {
+  --stroke-dashoffset: 0;
+}
+.checkbox input:checked + svg + svg {
+  --animation: check;
+}
+.checkbox:hover input:not(:checked) {
+  --border: var(--border-hover);
+}
+@keyframes check {
+  100% {
+    stroke-dashoffset: 4.5px;
+ }
+}
+
+
+
+
 @media (min-width: 22cm) {
-  .pdf{
-    display:flex;
-    justify-content:center;
+  .pdf {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -52,23 +213,31 @@ code {
     text-align: left;
   }
 
-  .pdf{
+  .pdf {
     display: block;
-    overflow-x:scroll;
+    overflow-x: scroll;
   }
 }
 
-.t1{
-  background-color: #868e96;margin:0;width:100%;
-}
-.t2{
-  background-color:#02c3cc;margin:0;width:100%;
-}
-.t3{
-  background-color:#FFFFFF;margin:0;width:100%;
+.t1 {
+  background-color: #868e96;
+  margin: 0;
+  width: 100%;
 }
 
- 
+.t2 {
+  background-color: #02c3cc;
+  margin: 0;
+  width: 100%;
+}
+
+.t3 {
+  background-color: #FFFFFF;
+  margin: 0;
+  width: 100%;
+}
+
+
 /*style navbar*/
 .navvv {
   justify-content: center;
@@ -170,7 +339,7 @@ code {
     flex-direction: column;
   }
 }
- 
+
 
 .formdonnees {
   margin-top: 6vh;
@@ -482,7 +651,7 @@ code {
   margin-left: 20%;
   margin-right: 20%;
 }
- 
+
 
 .mytable-41 {
   height: 41vh;
@@ -547,77 +716,80 @@ code {
   color: white;
 }
 
-.backgroundd{
+.backgroundd {
   border: solid;
   height: 100vh;
   width: 100vw;
   position: absolute;
-  top:0;
-  background-image: url( ./gavel-scaled6.jpg );
+  top: 0;
+  background-image: url(./gavel-scaled6.jpg );
   background-size: 100% 100%;
-   background-repeat: no-repeat;
-background-position: 0  5vh;
+  background-repeat: no-repeat;
+  background-position: 0 5vh;
 }
 
-.side{
+.side {
   background-color: #000000;
   height: 100vh;
   width: 35vw;
   position: absolute;
   left: 0;
-  top:0;
-  opacity: 0.2 ;
+  top: 0;
+  opacity: 0.2;
 }
 
-.sidetitle{
-top: 10vh;
- font-weight: bold;
-position: relative;
-color: rgb(0, 0, 0);
-left: 4vw;
-max-width: 25vw;
+.sidetitle {
+  top: 10vh;
+  font-weight: bold;
+  position: relative;
+  color: rgb(0, 0, 0);
+  left: 4vw;
+  max-width: 25vw;
 }
 
-.sidetitlee{
-   position: relative;
-font-size: 0.9rem;
+.sidetitlee {
+  position: relative;
+  font-size: 0.9rem;
   color: #BBA14A;
   left: 4vw;
-  top:11vh;
+  top: 11vh;
   max-width: 25vw;
   font-family: 'Pacifico', cursive;
 }
 
 @media (orientation: portrait) {
-  .backp{
+  .backp {
     background-image: url(./gavel-scaledp.jpg);
     height: 100vh;
     width: 100vw;
     position: absolute;
-    top:0;
-     background-size: 100% 100%;
-     background-repeat: no-repeat;
-  background-position: 0  5vh;
-  }.backgroundd{
+    top: 0;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: 0 5vh;
+  }
+
+  .backgroundd {
     display: none;
   }
+
   .navbar {
     background-color: #000000;
     min-height: 8vh;
   }
 
-  .side{
+  .side {
     background-color: #000000;
     height: 40vh;
     width: 100vw;
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     right: 0;
-    opacity: 0.2 ;
+    opacity: 0.2;
   }
 
-  .sidetitle{
+  .sidetitle {
     top: 15vh;
     font-weight: bold;
     position: absolute;
@@ -625,27 +797,27 @@ font-size: 0.9rem;
     font-size: 2rem;
 
     max-width: 100vw;
- 
-    }
 
-    .sidetitlee{
-   position: absolute;
-   font-size: 0.9rem;
-     color: #BBA14A;
-    
+  }
 
-     top:21vh;
-     max-width: 100vw;
-     font-family: 'Pacifico', cursive;
-   }
+  .sidetitlee {
+    position: absolute;
+    font-size: 0.9rem;
+    color: #BBA14A;
+
+
+    top: 21vh;
+    max-width: 100vw;
+    font-family: 'Pacifico', cursive;
+  }
 }
 
 @media (orientation: landscape) {
-  .backp{
+  .backp {
     display: none;
-  } 
+  }
+
   .navbar {
-     min-height: 10vh;
+    min-height: 10vh;
   }
 }
- 
